Főoldal HTML, CSS alap kinézet

--- a/Project/index.html
+++ b/Project/index.html
@@ -8,6 +8,68 @@
     <title>Főoldal</title>
 </head>
 <body>
-    
+    <div class="content">
+        <div class="commercial">
+            <p>Kiadó reklám felület</p>
+            <p>Kiadó reklám felület</p>
+            <p>Kiadó reklám felület</p>
+            <p>Kiadó reklám felület</p>
+        </div>
+        <div class="menu">
+
+            <div class="gameTicket">
+                <div class="img">
+                    <img src="../Kepernyotervek/Memory_game/Játék.png" alt="">
+                </div>
+                <div class="gameDetails">
+                    <h1>Memória játék</h1>
+                    <p>A memóriajáték kártyákkal játszható, puzzle jellegű táblajáték. A győzelemhez az összes párt meg kell találni. A célja, hogy próbára tegye a játékosok emlékezőképességét.</p>
+                    <a href="#">Játék kezdése</a>
+                </div>
+            </div>
+
+            <div class="gameTicket">
+                <div class="img">
+                    <img src="../Project/img/placeholder-img.jpg" alt="">
+                </div>
+                <div class="gameDetails">
+                    <h1>Játék címe</h1>
+                    <p>A játék részletesebb leírása.</p>
+                    <a href="#">Játék kezdése</a>
+                </div>
+            </div>
+
+            <div class="gameTicket">
+                <div class="img">
+                    <img src="../Project/img/placeholder-img.jpg" alt="">
+                </div>
+                <div class="gameDetails">
+                    <h1>Játék címe</h1>
+                    <p>A játék részletesebb leírása.</p>
+                    <a href="#">Játék kezdése</a>
+                </div>
+            </div>
+
+            <div class="gameTicket">
+                <div class="img">
+                    <img src="../Project/img/placeholder-img.jpg" alt="">
+                </div>
+                <div class="gameDetails">
+                    <h1>Játék címe</h1>
+                    <p>A játék részletesebb leírása.</p>
+                    <a href="#">Játék kezdése</a>
+                </div>
+            </div>
+
+        </div>
+
+        <div class="commercial">
+            <p>Kiadó reklám felület</p>
+            <p>Kiadó reklám felület</p>
+            <p>Kiadó reklám felület</p>
+            <p>Kiadó reklám felület</p>
+        </div>
+
+    </div>
 </body>
 </html>
