Memória játék kártyák elrendezése

--- a/Project/Memory_game/memory_game.html
+++ b/Project/Memory_game/memory_game.html
@@ -18,6 +18,9 @@
                 <button id="diffBtnMedium">Közepes</button>
                 <button id="diffBtnHard">Nehéz</button>
             </div>
+            <div class="cards">
+                
+            </div>
             <div class="gameStart">
                 <p>Választott nehézség: <span id="gameGrid">Könnyű (3 x 4)</span></p>
                 <button id="startBtn">Játék indítása</button>
