--- a/Project/Memory_game/memory_game.html
+++ b/Project/Memory_game/memory_game.html
@@ -13,13 +13,16 @@
         <a href="#">Kilépés</a>
     </div>
     <div class="gameField">
-            <div class="diffBtns">
+            <div class="diffBtns active">
                 <button id="diffBtnEasy">Könnyű</button>
                 <button id="diffBtnMedium">Közepes</button>
                 <button id="diffBtnHard">Nehéz</button>
             </div>
             <div class="cards">
                 
+            </div>
+            <div class="gg">
+                <p>Gratulálunk nyertél!</p>
             </div>
             <div class="gameStart">
                 <p>Választott nehézség: <span id="gameGrid">Könnyű (3 x 4)</span></p>
