Memória játék összekötése a főoldallal + Kép

--- a/Project/Memory_game/memory_game.html
+++ b/Project/Memory_game/memory_game.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="navbar">
-        <a href="#">Kilépés</a>
+        <a href="../index.html">Kilépés</a>
     </div>
     <div class="gameField">
             <div class="diffBtns active">
