--- a/Project/index.html
+++ b/Project/index.html
@@ -19,12 +19,12 @@
 
             <div class="gameTicket">
                 <div class="img">
-                    <img src="../Kepernyotervek/Memory_game/Játék.png" alt="">
+                    <img src="./img/Memori_game_pic.png" alt="">
                 </div>
                 <div class="gameDetails">
                     <h1>Memória játék</h1>
                     <p>A memóriajáték kártyákkal játszható, puzzle jellegű táblajáték. A győzelemhez az összes párt meg kell találni. A célja, hogy próbára tegye a játékosok emlékezőképességét.</p>
-                    <a href="#">Játék kezdése</a>
+                    <a href="./Memory_game/memory_game.html">Játék kezdése</a>
                 </div>
             </div>
 
